# psh-gui

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  config.xml  cordovaBeforePrepare.js  index.css  index.html  npmFilesToImport.json  package.json
icons/: colors.xml  icon.icns
src/: app.rs  lib.rs
src-cordova/: config.xml  cordovaBeforePrepare.js  package-lock.json  package.json
src-cordova/www/: index.html
src-cordova/www/js/: index.js
src-tauri/: Cargo.toml  tauri.conf.json
src/app/components/: alias_dropdown.rs  alias_input.rs  collapsible.rs  keyboard.rs  mod.rs  secret_input.rs  triswitch.rs
www/css/: index.css
