[package]
name = "psh-gui"
version = "0.2.0"
edition = "2021"
description = "Psh Password Manager GUI based on Yew"
readme = "README.md"
repository = "https://github.com/uvizhe/psh-gui"
license = "MIT"
keywords = ["password", "password-generator", "password-manager", "yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]
authors = ["Alexander Uvizhev"]

[workspace]
members = ["src-tauri"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
gloo-events = "0.1.2"
gloo-timers = "0.2.6"
once_cell = "1.17.0"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.59", features = ["HtmlDivElement", "Navigator", "ScrollIntoViewOptions",
    "ScrollLogicalPosition"] }
yew = { version="0.20", features=["csr"] }

psh = { version = "0.5.0", path = "../psh" }
psh-webdb = { version = "0.2.0", path = "../psh/webdb" }

[features]
keyboard = []
