[package]
name = "psh-gui-tauri"
description = "Psh Password Manager GUI based on Yew and wrapped in Tauri app"
default-run = "psh-gui-tauri"
authors = ["Alexander Uvizhev"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/uvizhe/psh-gui"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
